docs(openspec): split the agent foundation out of provider-java-swing
provider-java-swing carried two different things — getting an agent into
a JVM, and turning its answers into PlatynUI nodes — which made it the
largest open change at 27 tasks and forced an illogical order: start it,
switch to unify-java-provider, come back. The seam shows in its own spec
delta: two of its five requirements never mention a tree.

- java-agent-core (new): the Gradle product project, the agent JAR
  skeleton (entry points, wire, handshake file, element registry,
  threading), the native Rust attach transport, the new crate
  crates/java-agent with the wire-level client, and delivery via the
  platynui-provider-java wheel and the platynui.providers entry point.
  Ends where the adapters begin: the agent is in the JVM and answers.
  It surfaces no PlatynUI node and depends on nothing open.
- provider-java-swing: keeps the mapping layer and the Swing/AWT
  adapter, down to 19 tasks; decisions renumbered 1-5.
- javafx/swt: now depend on both, which is what they always needed —
  the infrastructure, not the Swing adapter.

Order becomes linear with no interleaving: java-agent-core and
unify-java-provider (independent of each other) before provider-java-swing.

Review findings folded in while splitting:

- auto_attach was specified in the foundation, which has no provider and
  no window enumeration and therefore cannot implement or demonstrate it.
  The mechanism and its availability gate stay in java-agent-core, the
  routing policy moves to provider-java-swing as its own requirement.
- The Linux half of the Why was never verified: the Swing suites are
  tagged platform:windows because JAB is Windows-only, so nothing proved
  Swing is reachable on Linux without java-atk-wrapper. Added as an
  acceptance task with its own X11 tagging.
- "0700" is a POSIX concept and the handshake file carries the auth
  token; Windows needs a user-restricted ACL, now stated and verified
  there.
- The ag